[gd_scene load_steps=2 format=3 uid="uid://chtqm6k3hggad"]

[ext_resource type="Script" path="res://kitchen-sink/TestNetworking.gd" id="1_eghsr"]

[node name="TestNetworking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eghsr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Networking sample

You can test this in two ways:
- start a listen server, then a client on the same app
- start a server on one app, then a client on a second app"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="StartServer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start server"

[node name="StartListenServer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start listen server"

[node name="StartClient" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start client"

[node name="ShowLogs" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show logs"

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Waiting for action..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartServer" to="." method="_start_server"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartListenServer" to="." method="_start_listen_server"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartClient" to="." method="_start_client"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ShowLogs" to="." method="_show_logs"]
